@@ -10,12 +10,10 @@
 #include <cstdio>
 #include <cstdlib>
 #include <unistd.h>
-#include "facilities.hpp"
+// #include "facilities.hpp"
 
 #ifndef CPP_LOG_DEFINITIONS_HPP
 #define CPP_LOG_DEFINITIONS_HPP
-
-// #define LOGGER_LOG_PATTERN "<%d>1 %s %s %s.%d.%d - %-16s"
 
 namespace logger {
 
@@ -23,21 +21,20 @@ namespace logger {
      * @{
      */
 
-    /* The constexpr specifier declares that it is possible to evaluate the value of the function or variable at compile time.
-     */
-    constexpr short LOG_EMERG    = 0;
-    constexpr short LOG_ALERT    = 1;
-    constexpr short LOG_CRIT     = 2;
-    constexpr short LOG_ERR      = 3;
-    constexpr short LOG_WARNING  = 4;
-    constexpr short LOG_NOTICE   = 5;
-    constexpr short LOG_INFO     = 6;
-    constexpr short LOG_DEBUG    = 7;
-    constexpr short LOG_TRACE    = 8;
-    constexpr short MAXECIDLEN   = 64;
+    //The constexpr specifier declares that it is possible to evaluate the value of the function or variable at compile time.
+    constexpr short LOG_EMERG    = 0; //!< emergency logging level (see RFC5424)
+    constexpr short LOG_ALERT    = 1; //!< alert logging level (see RFC5424)
+    constexpr short LOG_CRIT     = 2; //!< critical logging level (see RFC5424)
+    constexpr short LOG_ERR      = 3; //!< error logging level (see RFC5424)
+    constexpr short LOG_WARNING  = 4; //!< warning logging level (see RFC5424)
+    constexpr short LOG_NOTICE   = 5; //!< notice logging level (see RFC5424)
+    constexpr short LOG_INFO     = 6; //!< informatin logging level (see RFC5424)
+    constexpr short LOG_DEBUG    = 7; //!< debug logging level (see RFC5424)
+    constexpr short LOG_TRACE    = 8; //!< trace logging level (see RFC5424)
+    constexpr short MAXECIDLEN   = 64;//!< execution ID maximum size/length
     constexpr char const *LOGGER_LOG_PATTERN = "<%d>1 %s %s %s.%d.%d - %-16s";
 
-    const long HOST_NAME_MAX = sysconf(_SC_HOST_NAME_MAX);
+    const long HOST_NAME_MAX = sysconf(_SC_HOST_NAME_MAX); //!< hostname max size/length
     //if (host_name_max <= 0) host_name_max = _POSIX_HOST_NAME_MAX;
 
     class logger;
